--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 * {
-    font-size: large;
+    font-size: 22px;
+}
+
+body {
+    margin-left: 10rem;
+    margin-right: 10rem;
 }
 
 p, li, th, td {
@@ -66,6 +71,10 @@ section > article {
 
 section > .slideshow {
     flex: 0 1 50%;
+}
+
+.slideshow > img {
+    width: 50%;
 }
 
 section > aside {
